--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="player"></div>
 	<div id="overlay"></div>
 
-	<div id="title">iJonezi's RP</div>
+	<div id="title">New Vision Gaming Enhanced Roleplay</div>
 	<div id="subtitle">
 		We are currently playing <span id="gamemode">DarkRP</span> at <span id="map">rp_downtown_v2</span>
 	</div>
